fixed playing column being full width on smaller screens

--- a/AlanWalkerTheme/trivia.css
+++ b/AlanWalkerTheme/trivia.css
@@ -128,11 +128,15 @@ a.selected-1-Z6gm .layout-1qmrhw {
 }
 .nowPlayingColumn-1eCBCN {
   width: 360px;
+  min-width: unset;
+  max-width: unset;
 }
 @media (max-width: 1200px) {
   .nowPlayingColumn-1eCBCN {
     display: block;
-    transition: min-width 0.5s;
+    transition: width 0.5s;
+    min-width: unset;
+    max-width: unset;
     width: 200px;
   }
   .nowPlayingColumn-1eCBCN:hover {
